Fix hero image not showing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ header h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url("/assets/images/cocktails.jpg") no-repeat center center / cover;
+    background: url("/assets/images/cocktails.jpg") no-repeat center center / 100%;
     box-shadow: 0 10px 20px #fff;  
 }
 
